# bible-ai-assistant

./: .cursorrules.txt  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  CURSOR_CHECKLIST.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-rag.txt  requirements-ui.txt  requirements.txt
.cursor/rules/: bible-ai-conventions.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
benchmarks/: README.md  manifest.v1.yaml
data/: README.md  sample.json
deployment/jetson/: deploy.md  install.sh  llama_server.service  rag_server.service
deployment/pc/: Dockerfile.rag  Dockerfile.ui  Modelfile.template  README.md  docker-compose.yml  generate_modelfile.py  ollama_setup.md  voice_setup.md
deployment/vps/: setup.md
docs/: BENCHMARK_PROTOCOL.md  CODEBASE_AUDIT.md  DEMO_LAUNCH.md  DEVELOPMENT_WORKFLOW.md  ENVIRONMENT_REQUIREMENTS.md  EVALUATION_CHECKLIST.md  MODEL_CARD.md  MODEL_COMPARISON.md  OPTIMIZATION_PLAN.md  ORPO_TWO_ENV_SETUP.md  PORTFOLIO.md  PROJECT_JOURNEY.md  PROJECT_STATUS_AND_GOALS.md  QWEN35_MERGE_AND_DEPLOYMENT.md  README.md  SERVING_GOD.md  SHIP_v1_AND_POLISH_BACKLOG.md  STEP8_WEB_DATASET.md  WALKTHROUGH.md  architecture.md  eval_sft_orpo_keyword.json  evaluation_results.md
docs/benchmark_runs/: 20260320_orpo-f16_judge.json  20260320_orpo-f16_keyword.json  20260320_orpo-q4_judge.json  20260320_sanity_keyword.json  README.md
docs/training_results/: 2026-03-19-run-notes.md  POST_TRAINING_CHECKLIST.md  README.md
prompts/: README.md  evaluation_questions.json  system_prompt.txt  system_prompt_training.txt
rag/: README.md  __init__.py  build_index.py  helpers.py  query_test.py  rag_server.py  response_cleanup.py  retrieval.py  settings.py
scripts/: compare_benchmark_runs.py  leaderboard.py  run_benchmark.py  start_demo.ps1  test_base_model.py  test_merged_model.py
tests/: __init__.py  test_benchmark_manifest.py  test_evaluate_keyword.py  test_evaluation_questions.py  test_hypothesis.py  test_rag_api.py  test_rag_helpers.py  test_rag_pure_functions.py  test_training_utils.py
training/: README.md  __init__.py  build_preference_data.py  config.yaml  convert_web_tehshrike.py  dataset_builder.py  evaluate.py  merge_adapters.py  train_orpo.py  train_unsloth.py
ui/: README.md  app.py
voice/: README.md  stt_server.py  tts_config.md
