[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bible-ai-assistant"
version = "0.1.0"
description = "Bible-specialized AI assistant: fine-tuned Qwen3.5-4B, RAG, voice, constitutional guardrails."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Tremayne Timms"}]
keywords = ["bible", "llm", "rag", "fine-tuning", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Minimal cross-component core — does not pull CUDA, training, or UI deps.
    # Use component extras for targeted installs:
    #   pip install -e .[rag]          RAG server only
    #   pip install -e .[ui]           Gradio UI + voice
    #   pip install -e .[train]        Training pipeline (install PyTorch separately first)
    #   pip install -e .[rag,ui]       RAG + UI together
    #   pip install -e .[rag,ui,dev]   Development setup
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4.0,<2.0.0",
    "sentence-transformers>=2.2.0,<6.0.0",
    "einops>=0.7.0,<1.0.0",
    "rank_bm25>=0.2.2,<1.0.0",
    "numpy>=1.24.0,<3.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "httpx>=0.26.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "python-json-logger>=3.0.0,<5.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
]
ui = [
    "gradio>=6.0,<6.15",
    "faster-whisper>=1.0.0,<2.0.0",
    "soundfile>=0.12.0,<1.0.0",
    "httpx>=0.26.0,<1.0.0",
]
train = [
    "transformers>=4.40.0,<5.0.0",
    "datasets>=2.18.0,<5.0.0",
    "peft>=0.10.0,<1.0.0",
    "trl>=0.8.0,<1.0.0",
    "accelerate>=0.33.0,<2.0.0",
    "bitsandbytes>=0.44.0,<1.0.0",
    "unsloth>=2024.1",
    "wandb>=0.18.0,<1.0.0",
    "huggingface_hub>=0.20.0,<2.0.0",
    "sentencepiece>=0.2.0,<1.0.0",
    "PyYAML>=6.0,<7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "anyio[trio]>=3.0",
    "ruff>=0.4.0",
    "numpy",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "hypothesis>=6.100.0",
    "pre-commit>=3.7.0",
    "ty>=0.0.1",
    "instructor>=1.0.0,<2.0.0",
]

[project.scripts]
rag-server = "rag.rag_server:serve"
build-index = "rag.build_index:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*", "training*", "ui*", "voice*", "deployment*", "scripts*"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["chroma_db", "checkpoints", "checkpoints-orpo", "wandb", "unsloth_compiled_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

# evaluate.py inserts repo root into sys.path before importing `rag` (script entrypoint).
[tool.ruff.lint.per-file-ignores]
"training/evaluate.py" = ["E402"]
"training/dataset_builder.py" = ["SIM116"]  # _format_response: explicit branches read clearer than a dict of lambdas
"training/train_unsloth.py" = ["I001"]  # Imports inside try/except for dependency checking
"training/train_orpo.py" = ["I001"]  # Imports inside try/except for dependency checking
"ui/app.py" = ["I001", "SIM115"]  # Lazy imports; NamedTemporaryFile(delete=False) for Gradio file paths
"tests/test_evaluate_keyword.py" = ["E402"]  # sys.path before training.evaluate
"tests/test_training_utils.py" = ["E402"]   # sys.path before training.* imports
"deployment/pc/generate_modelfile.py" = ["SIM108"]  # explicit if/else for GGUF path resolution

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = [
    # Require torch/unsloth/CUDA — not testable without the full ML stack
    "training/train_unsloth.py",
    "training/train_orpo.py",
    "training/dataset_builder.py",
    "training/convert_web_tehshrike.py",
    # Require a running ChromaDB instance
    "rag/build_index.py",
    # Manual/interactive test scripts
    "rag/query_test.py",
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "chroma_db", "checkpoints", "checkpoints-orpo", ".venv"]
skips = [
    "B101",  # assert statements in tests
    "B615",  # HuggingFace from_pretrained() without revision pin.
             # All occurrences are in training/ and scripts/ (developer-only tools, never
             # exposed to external input). The production RAG server (rag/) contains zero
             # from_pretrained() calls. Pinning a revision would break Unsloth's FastLanguageModel
             # loader and is non-standard in fine-tuning workflows.
]
